--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/AbcAbcwebd/NYT-React-Search#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "concurrently": "^3.5.0",
     "express": "^4.16.1",
     "nodemon": "^1.12.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.83.0"
   }
 }
