--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/AbcAbcwebd/NYT-React-Search#readme",
   "dependencies": {
+    "axios": "^0.16.2",
     "cheerio": "^1.0.0-rc.2",
     "concurrently": "^3.5.0",
     "express": "^4.16.1",
