--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.1",
     "nodemon": "^1.12.1",
     "path": "^0.12.7",
+    "react-router-dom": "^4.2.2",
     "request": "^2.83.0"
   }
 }
