--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cheerio": "^1.0.0-rc.2",
     "concurrently": "^3.5.0",
     "express": "^4.16.1",
+    "mongoose": "^4.12.1",
     "nodemon": "^1.12.1",
     "path": "^0.12.7",
     "react-router-dom": "^4.2.2",
