--- a/nyt-react-search/package.json
+++ b/nyt-react-search/package.json
@@ -7,7 +7,8 @@
     "mongoose": "^4.12.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "socket.io": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
