--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^1.12.1",
     "path": "^0.12.7",
     "react-router-dom": "^4.2.2",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "socket.io": "^2.0.3"
   }
 }
